@@ -1,3 +1,6 @@
+2017-04-11  Andrew Hamlin  <andrew.hamlin@sailpoint.com>
+	Implemented cycletime and velocity sub-commands using argparse
+	
 2017-03-24  Andrew Hamlin  <andrew.hamlin@sailpoint.com>
 	Renamed as cycle_times.py
 	Refactored supporting library for simple logging
